# Learning

./: README.md  teset.txt
Linux/: README.md
Linux/face_age/: main.cpp
Linux/face_compare/: main.cpp  sdkdemo32  sdkdemo64
Linux/face_detection/: sdkdemo64
Linux/face_emotion/: sdkdemo32
Linux/face_gender/: main.cpp
Linux/face_landmark5/: sdkdemo64
bodypose/: CMakeLists.txt  body_pose.h  main.cpp  pose_postprocess.cpp  sdkdemo32  sdkdemo64  util.c
face_age/: CMakeLists.txt  face_age.h  main.cpp  sdkdemo32  sdkdemo64  util.c
face_compare/: face_compare.h  main.cpp  sdkdemo32  util.c
face_detection/: face_detection.h  face_detection_postprocess.c  main.cpp  sdkdemo32  sdkdemo64
face_emotion/: face_emotion.h  face_emotion_postprocess.c  main.cpp  sdkdemo32  sdkdemo64  util.c
face_gender/: face_gender.h  main.cpp  sdkdemo32  sdkdemo64  util.c
face_landmark5/: face_landmark5.h  main.cpp  sdkdemo32  sdkdemo64
face_landmark68/: face_landmark68.h  main.cpp  sdkdemo32  sdkdemo64  util.c
face_recognize/: face_recognize.h  main.cpp  sdkdemo32  sdkdemo64  util.c
face_rfb_det/: face_rfb_det.h  face_rfb_det_postprocess.c  main.cpp  sdkdemo32  sdkdemo64  util.c
head_detection/: head_detection.h  main.cpp  sdkdemo32  sdkdemo64  util.c
image_segmentation/: image_segmentation.h  main.cpp  sdkdemo32  sdkdemo64  util.c
include/: imagelabel.h  nn_util.h
person_detection/: main.cpp  person_detection.h  person_detection_postprocess.c  sdkdemo32  sdkdemo64  util.c
yolov3/: main.cpp  sdkdemo32  sdkdemo64  util.c  yolov3.h  yolov3_postprocess.c
(+108 files in other folders)
